--- a/style.css
+++ b/style.css
@@ -1,24 +1,38 @@
+@layer reset, default, patterns;
+
 * {
   box-sizing: border-box;
   margin: 0px;
   padding: 0px;
+  border: 1px solid red;
 }
 body{
-   
+   background-image: url(lndn.jpg);
+   background-position: center;
 }
 
-.holder{        }
-background-image: url(https://images.unsplash.com/photo-1665399212579-fb3e1ccf1a5b?crop=entropy&cs=tinysrgb&fm=jpg&ixid=MnwzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2Njc4MjcwMDc&ixlib=rb-4.0.3&q=80);
-.wrapper{
-  width: 30vw;
+.parent {
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+    grid-auto-flow: row; 
+}
+
+.div1 { 
+    grid-area: 1 / 1 / 3 / 4; 
+    
 
 }
+.div2 { grid-area: 1 / 5 / 2 / 10; }
+.div3 { grid-area: 3 / 1 / 4 / 11; }
 
 .letter {
-  shape-outside: circle(50% at 50% 50%);
-  clip-path: circle(50% at 50% 50%);
+  shape-outside: circle(45% at 50% 50%);
+  clip-path: circle(45% at 50% 50%);
   width: 200px;
-  height: 200px; 
+  height: 180px; 
   float: left;
   font-size: 8em;
   font-family: sans-serif;
@@ -37,13 +51,33 @@ background-image: url(https://images.unsplash.com/photo-1665399212579-fb3e1ccf1a
 .triangle {
   width: 0;
   height: 0;
-  border-left: 0px solid red;
-  border-right: 45vw solid transparent;
-  border-top: 20vw solid grey;
+  border-left: 0px solid ;
+  border-right: 850px solid ;
+  border-top: 350px solid ;
   top: 0px;
-  position: fixed;
-  opacity: 0.5;
+  position: absolute;
+  opacity: 0.8;
+  color: white;
   clip-path: polygon(100% 0%, 0 0, 0 100%);
 }
+
+.headerText, #headerTextSign{
+  font-family: tahoma, sans-serif;
+  padding-top: 1vw; 
+  line-height: 1.5; 
+  font-size: 1em;
+  text-align: right;
+}
+#headerTextSign, #signature {
+  padding-top: 0;
+  font-size: 0.9em;
+}
+#signature {
+  font-family: brush script mt;
+  font-size: 1.5em;
+}
+
+
+
 
 
