--- a/style.css
+++ b/style.css
@@ -6,78 +6,108 @@
   padding: 0px;
   border: 1px solid red;
 }
-body{
-   background-image: url(lndn.jpg);
-   background-position: center;
+
+.animate-pop-in {
+  animation: pop-in .6s cubic-bezier(0, .9, .3, 1.2) forwards;
+  opacity: 0;
 }
 
-.parent {
-    display: grid;
-    grid-template-columns: repeat(10, 1fr);
-    grid-template-rows: repeat(3, 1fr);
-    grid-column-gap: 0px;
-    grid-row-gap: 0px;
-    grid-auto-flow: row; 
+header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.2rem;
+  height: 100vh;
+  overflow: hidden;
+  perspective: 100px;
+  position: relative;
+  text-align: center;
+  transform-style: preserve-3d;
+  background: #333;
+  font-family: courier new, garamond, serif;
 }
 
-.div1 { 
-    grid-area: 1 / 1 / 3 / 4; 
-    
-
-}
-.div2 { grid-area: 1 / 5 / 2 / 10; }
-.div3 { grid-area: 3 / 1 / 4 / 11; }
-
-.letter {
-  shape-outside: circle(45% at 50% 50%);
-  clip-path: circle(45% at 50% 50%);
-  width: 200px;
-  height: 180px; 
-  float: left;
-  font-size: 8em;
-  font-family: sans-serif;
-  font-weight: bold;
-  color: #ff0000;
-  transform: scaleX(-1);
-}
-
-.introtext{
-  padding-top: 1vw; 
-  line-height: 1.5; 
-  font-size: 1em;
-  font-family: sans-serif;
-}
-
-.triangle {
-  width: 0;
-  height: 0;
-  border-left: 0px solid ;
-  border-right: 850px solid ;
-  border-top: 350px solid ;
-  top: 0px;
+header:before {
+  animation: fade-slide-down 2s .1s cubic-bezier(0, .5, 0, 1) forwards;
+  background: linear-gradient(to bottom, rgba(0,0,0,0),
+    rgba(0,0,0,.8)),
+    url(lndn.jpg) no-repeat bottom;
+  background-size: cover;
+  content: "";
   position: absolute;
-  opacity: 0.8;
-  color: white;
-  clip-path: polygon(100% 0%, 0 0, 0 100%);
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: -1;
 }
 
-.headerText, #headerTextSign{
-  font-family: tahoma, sans-serif;
-  padding-top: 1vw; 
-  line-height: 1.5; 
-  font-size: 1em;
-  text-align: right;
-}
-#headerTextSign, #signature {
-  padding-top: 0;
-  font-size: 0.9em;
-}
-#signature {
-  font-family: brush script mt;
-  font-size: 1.5em;
+header:after{
+  animation: rotate-up 1s .1s cubic-bezier(0, .5, 0, 1) forwards;
+  background: #eee;
+  content: "";
+  height: 40rem;
+  left: -5%;
+  position: absolute;
+  right: -5%;
+  top: 90%;
+  transform-origin: 0 0;
 }
 
+.header-title, .header-subtitle, .header-subtitle2, .header-about-me {
+  color: #eee;
+  padding-top: 1vh;
+  animation-delay: .2s;
+}
 
+.header-subtitle {
+  margin-bottom: 1vh;
+  animation-delay: .4s;
+}
 
+.header-subtitle2 {
+  text-transform: uppercase;
+  animation-delay: .6s;
+}
 
+.header-about-me {
+  display: none;
+  padding-left: 2vw;
+  padding-right: 2vw;
+}
 
+svg {
+  fill: #eee;
+  position: relative;
+  top: .25rem;
+}
+
+/* Animations */
+@keyframes fade-slide-down {
+  0% {
+    opacity: 0;
+    transform: translateY(-4rem);
+  }
+  100% {
+    opacity: 1;
+    transform: none;
+  }
+}
+
+@keyframes pop-in {
+  0% {
+    opacity: 0;
+    transform: translateY(-4rem) scale(.8);
+  }
+  100% {
+    opacity: 1;
+    transform: none;
+  }
+}
+
+@keyframes rotate-up {
+  100% {
+    transform: rotateZ(-4deg);
+  }
+
+}
