--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ header:before {
   animation: fade-slide-down 2s .1s cubic-bezier(0, .5, 0, 1) forwards;
   background: linear-gradient(to bottom, rgba(0,0,0,0),
     rgba(0,0,0,.8)),
-    url(lndn.jpg) no-repeat bottom;
+    url("lndn.jpg") no-repeat bottom;
   background-size: cover;
   content: "";
   position: absolute;
