--- a/style.css
+++ b/style.css
@@ -76,6 +76,11 @@ header:after{
   padding-right: 2vw;
 }
 
+.header-action {
+  padding-top: 2vh;
+  animation: pulse 2s 3s ease-out infinite;
+}
+
 svg {
   fill: #eee;
   position: relative;
@@ -109,5 +114,19 @@ svg {
   100% {
     transform: rotateZ(-4deg);
   }
+}
 
+@keyframes pulse {
+  0% {
+    opacity: 1;
+    transform: none;
+  }
+  50% {
+    opacity: .8;
+    transform: scale(.8);
+  }
+  100% {
+    opacity: 1;
+    transform: none;
+  }
 }
